Added cheerio, axios & scraping code to get magnet links

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "postinstall": "electron-builder install-app-deps",
     "ng": "ng",
     "start": "npm-run-all -p electron:serve ng:serve",
+    "debug": "npm-run-all -p electron:debug ng:serve",
     "ng:serve": "ng serve -c web -o",
     "build": "npm run electron:serve-tsc && ng build --base-href ./",
     "build:dev": "npm run build -- -c dev",
@@ -34,6 +35,7 @@
     "web:build": "npm run build -- -c web-production",
     "electron": "electron",
     "electron:serve-tsc": "tsc -p tsconfig.serve.json",
+    "electron:debug": "wait-on tcp:4200 && npm run electron:serve-tsc && electron . --serve --inspect=5858",
     "electron:serve": "wait-on tcp:4200 && npm run electron:serve-tsc && electron . --serve",
     "electron:local": "npm run build:prod && electron .",
     "electron:build": "npm run build:prod && electron-builder build --publish=never",
@@ -53,6 +55,9 @@
     "@angular/platform-browser": "13.3.1",
     "@angular/platform-browser-dynamic": "13.3.1",
     "@angular/router": "13.3.1",
+    "axios": "0.27.2",
+    "cheerio": "1.0.0-rc.11",
+    "peerflix": "0.39.0",
     "rxjs": "7.5.5",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.5"
