--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ng": "ng",
     "start": "npm-run-all -p electron:serve ng:serve",
     "debug": "npm-run-all -p electron:debug ng:serve",
+    "angular": "ng serve -c web -o",
     "ng:serve": "ng serve -c web -o",
     "build": "npm run electron:serve-tsc && ng build --base-href ./",
     "build:dev": "npm run build -- -c dev",
